[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "mcp[cli]>=1.26.0",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
